# gsclib

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  _gsclinq.gsc  appveyor.yml  cgsc.h  conanfile.py  conanfile.txt  gsclinq.c  gsclinq.h  gscunit.cmake  makedll_win32.cmd  makefile  vcpkg-configuration.json  vcpkg.json
.conan/: linux.conf  linux_build.conf  linux_host.conf  windows.conf
.github/: FUNDING.yml
.github/workflows/: linux.yml  windows.yml  windows.yml.disabled
.vcpkg/: linux.cmake  windows.cmake
.vcpkg/triplets/: x86-linux-static.cmake  x86-mingw-static.cmake
api/: CMakeLists.txt  _gsclib.asm  gsclib.cpp  gsclib.hpp  install.bat  install.sh
cgsc/: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  cgsc.h  cod4x.h  plugin.h  vcpkg-configuration.json  vcpkg.json
cgsc/.github/workflows/: linux.yml  windows.yml
cgsc/.vcpkg/ports/cgsc/: portfile.cmake  usage  vcpkg.json
cgsc/.vcpkg/triplets/: x86-mingw-static.cmake
cgsc/asm/: CMakeLists.txt  cgsc_export.asm  cgsc_function.asm
cgsc/cmake/: CGSCConfig.cmake.in  ClangTools.cmake
cgsc/docs/: api.md  async.md  extensions.md
cgsc/extensions/: CMakeLists.txt  functions.c  functions.h  variables.c  variables.h
cgsc/extensions/__test__/: CMakeLists.txt  main.test.c
cgsc/sys/: CMakeLists.txt  async.c  async.h  compatibility.c  compatibility.h
cgsc/tests/: _suite.gsc  _test_variables.gsc
cgsc/utils/: CMakeLists.txt  utils.c  utils.h
cgsc/utils/__test__/: CMakeLists.txt  utils.test.c
cgsc/versions/: CMakeLists.txt  cgsc3.c  cgsc3.h  cgsc4.c  cgsc4.h
cmake/: ClangTools.cmake  FindLibcurl.cmake  FindLibmariadb.cmake  FindLibzip.cmake  FindOpenSSL.cmake  FindPCRE2.cmake
dependencies/: cgsc.h  dre2.c  dre2.h
docs/: async.md  critical.md  curl.md  file.md  ftp.md  http.md  https.md  linq.md  math.md  mysql.md  player.md  regex.md  system.md  utility.md  zip.md
libmariadb/: portfile.cmake  vcpkg.json
libs/gsclib/__test__/: _suite.gsc  _test_data.gsc  _test_linq.gsc  _test_net.gsc  _test_sys.gsc  _test_utils.gsc
libs/gscunit/: _main.gsc  _utils.gsc
scripts/: build_libcom.bat  build_linux.sh  build_windows.bat  linux_setup.sh  windows_setup.ps1
src/: Base.hpp  CMakeLists.txt  _gsclib_tests.gsc  main.cpp  nocgsc.c  plugin.c
src/Game/: CMakeLists.txt  Player.cpp  Player.hpp
src/IO/: CMakeLists.txt  File.cpp  File.hpp  Zip.cpp  Zip.hpp
src/Network/: CMakeLists.txt  FTP.cpp  FTP.hpp  HTTP.cpp  HTTP.hpp  MySQL.cpp  MySQL.hpp
src/System/: Async.cpp  Async.hpp  CMakeLists.txt  System.cpp  System.hpp
src/Utils/: CMakeLists.txt  Linq.cpp  Linq.hpp  Math.cpp  Math.hpp  Print.cpp  Print.hpp  Regex.cpp  Regex.hpp
src/__test__/: CMakeLists.txt  main.test.c  mock.c  mock.test.c
src/collections/: list.c  list.h
src/data/: CMakeLists.txt  file.c  file.h  mysql.c  mysql.h  regex.c  regex.h  zip.c  zip.h
src/data/__test__/: CMakeLists.txt  regex.test.c  zip.test.c
src/linq/: CMakeLists.txt  delegate.c  delegate.h  delegates.c  delegates.h  enumerable.c  enumerable.h  enumerables.c  enumerables.h  gsclinq.c  gsclinq.h  predicate.c  predicate.h  predicates.c  predicates.h
src/net/: CMakeLists.txt  curl.c  curl.h  ftp.c  ftp.h  http.c  http.h  https.c  https.h  mysql.c  mysql.h
src/sys/: CMakeLists.txt  system.c  system.h
src/utility/: convert.c  convert.h  polycmp.c  polycmp.h  regex.c  regex.h  stringutil.c  stringutil.h  util.c  utility.c  utility.h
src/utils/: CMakeLists.txt  Linq.cpp  Regex.cpp  Utils.cpp  Utils.hpp  convert.c  convert.h  math.c  math.h  player.c  player.h  polycmp.c  polycmp.h  stringutils.c  stringutils.h  utils.c  utils.h  vsnprintf.c  vsnprintf.h
src/utils/__test__/: CMakeLists.txt  vsnprintf.test.c
tests/: _gsclib.gsc  _main.gsc  _suite.gsc  _test_data.gsc  _test_game.gsc  _test_io.gsc  _test_net.gsc  _test_network.gsc  _test_sys.gsc  _test_system.gsc  _test_utils.gsc  _tests_collections.gsc  _tests_data.gsc  _tests_linq.gsc  _tests_net.gsc  _tests_utility.gsc
tests/gsclib/: _main.gsc  _tests_data.gsc  _tests_linq.gsc  _tests_net.gsc  _tests_utility.gsc  _tests_utils.gsc
